--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -383,6 +383,10 @@
     {#1}%
 }
 
+% Positive and negative item for itemize
+\newcommand{\positem}{\item[\Large\green{\textbf{+}}]}
+\newcommand{\negitem}{\item[\Large\red{\textbf{-}}]}
+
 % Tikz stuff
 
 \usetikzlibrary{datavisualization}
