slides matplotlib terminées

--- a/shared/latex/python/data-science/matplotlib.tex
+++ b/shared/latex/python/data-science/matplotlib.tex
@@ -204,5 +204,6 @@
     \mintedcustomcode{python/data-science/matplotlib/subplots2}{py}
 \end{frame}
 
-\begin{frame}{Sauvegarder des fichiers}
+\begin{frame}{Sauvegarder une visualisation}
+    \mintedcustomcode{python/data-science/matplotlib/save}{py}
 \end{frame}
