Add help pointers to all data science sections and pandas skeleton
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/data-science/matplotlib.tex
+++ b/shared/latex/python/data-science/matplotlib.tex
@@ -207,3 +207,17 @@
 \begin{frame}{Sauvegarder une visualisation}
     \mintedcustomcode{python/data-science/matplotlib/save}{py}
 \end{frame}
+
+\begin{frame}{Documentation}
+  \begin{itemize}
+    \item \bluelink{https://matplotlib.org/stable/users/index}{Documentation officielle}
+    \item Feuilles d'aides~:
+      \begin{itemize}
+        \item \bluelink{https://matplotlib.org/cheatsheets/cheatsheets.pdf}{Principale}
+        \item \bluelink{https://matplotlib.org/cheatsheets/handout-beginner.pdf}{Supplémentaire, niveau débutant}
+        \item \bluelink{https://matplotlib.org/cheatsheets/handout-intermediate.pdf}{Supplémentaire, niveau intermédiaire}
+        \item \bluelink{https://matplotlib.org/cheatsheets/handout-tips.pdf}{Supplémentaire, quelques astuces}
+      \end{itemize}
+    \item \bluelink{https://github.com/rougier/scientific-visualization-book}{Livre niveau intermédiare/avancé sur \texttt{matplotlib}}
+  \end{itemize}
+\end{frame}
