--- a/shared/latex/python/data-science/numpy.tex
+++ b/shared/latex/python/data-science/numpy.tex
@@ -133,4 +133,7 @@
 \begin{frame}{Sauvegarde de tableaux \texttt{numpy}}
   \mintedcustomcode{python/data-science/numpy/save}{pycon}
 \end{frame}
-% TODO Broadcast, map et compagnie
+
+\begin{frame}{Documentation}
+  \bluelink{https://numpy.org/doc/stable/user/index.html}{Documentation officielle}
+\end{frame}
