--- a/shared/latex/python/data-science/matplotlib.tex
+++ b/shared/latex/python/data-science/matplotlib.tex
@@ -218,6 +218,6 @@
         \item \bluelink{https://matplotlib.org/cheatsheets/handout-intermediate.pdf}{Supplémentaire, niveau intermédiaire}
         \item \bluelink{https://matplotlib.org/cheatsheets/handout-tips.pdf}{Supplémentaire, quelques astuces}
       \end{itemize}
-    \item \bluelink{https://github.com/rougier/scientific-visualization-book}{Livre niveau intermédiare/avancé sur \texttt{matplotlib}}
+    \item \bluelink{https://github.com/rougier/scientific-visualization-book}{Livre niveau intermédiaire/avancé sur \texttt{matplotlib}}
   \end{itemize}
 \end{frame}
