Add pandas slides first draft
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/data-science/numpy.tex
+++ b/shared/latex/python/data-science/numpy.tex
@@ -33,7 +33,7 @@
 \end{frame}
 
 \begin{frame}{Étude d'un tableau existant}
-  Les attributs \texttt{ndim}, \texttt{shape} et \texttt{size} permettent de connaître respectivement le nombre de dimensions, la forme et le nombre total d'éléments d'un tableau.
+  Les attributs \texttt{ndim}, \texttt{shape}, \texttt{size} et \texttt{dtype} permettent de connaître respectivement le nombre de dimensions, la forme, le nombre total d'éléments et le type des éléments d'un tableau.
   \mintedcustomcode{python/data-science/numpy/shape}{pycon}
 \end{frame}
 
