--- a/shared/latex/python/data-science/matplotlib.tex
+++ b/shared/latex/python/data-science/matplotlib.tex
@@ -3,7 +3,6 @@
     \emph{Matplotlib} est la librairie graphique de référence pour la visualisation 2D (la seule ?).
     
     Un très grand nombre de librairies gravitent autour de matplotlib pour répondre à différents besoins et différents domaines.
-    % \bluelink{https://pyviz.org/}{Pyviz} est une excellent source pour trouver une libraire utile pour vos besoins de visualisation.
 \end{frame}
 
 \begin{frame}{Un premier plot avec \texttt{plot(x, y)}}
@@ -219,5 +218,6 @@
         \item \bluelink{https://matplotlib.org/cheatsheets/handout-tips.pdf}{Supplémentaire, quelques astuces}
       \end{itemize}
     \item \bluelink{https://github.com/rougier/scientific-visualization-book}{Livre niveau intermédiaire/avancé sur \texttt{matplotlib}}
+    \item \bluelink{https://pyviz.org/}{Pyviz : Liste des librairies dépendantes de matplotlib}
   \end{itemize}
 \end{frame}
