add orsys/INTRA/2022-03-olea-medical;add nn vision-expert flavor skeleton

--- a/shared/latex/nn/cnn/keras.tex
+++ b/shared/latex/nn/cnn/keras.tex
@@ -1,15 +1,11 @@
-
-\begin{frame}
-  \frametitle{Dimension du tensor d'entrée}
+\begin{frame}{Dimension du tensor d'entrée}
   \mintedpy{tf-keras/cnn-input-dim}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Définition d'un modèle CNN}
+\begin{frame}{Définition d'un modèle CNN}
   \mintedpycode{tf-keras/cnn}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Affichage du modèle}
+\begin{frame}{Affichage du modèle}
   \mintedpy{tf-keras/print-cnn-model}
 \end{frame}
