--- a/shared/latex/nn/transformer/attention-model.tex
+++ b/shared/latex/nn/transformer/attention-model.tex
@@ -1,4 +1,5 @@
 \begin{frame}{Modèle à attention}
+  \alert{TODO}
   Modèle à attention pour la traduction
   \V{["img/attention-model", "th", 0.8] | image}
   \begin{center}
