--- a/shared/latex/nn/cnn/data.tex
+++ b/shared/latex/nn/cnn/data.tex
@@ -42,3 +42,11 @@
   10M photos de 100k célebrités
   \V{["img/ms-celeb", "th", 0.6] | image}
 \end{frame}
+
+\begin{frame}{Super résolution}
+  \alert{TODO}
+\end{frame}
+
+\begin{frame}{Détection d'anomalie}
+  \alert{TODO}
+\end{frame}
