--- a/shared/latex/nn/cnn/data.tex
+++ b/shared/latex/nn/cnn/data.tex
@@ -44,7 +44,7 @@
 \end{frame}
 
 \begin{frame}{Super résolution}
-  \alert{TODO}
+  \V{["tikz/neural-networks/cnn/super-resolution", "th", 0.5] | image}
 \end{frame}
 
 \begin{frame}{Détection d'anomalie}
