--- a/shared/latex/nn/cnn/task.tex
+++ b/shared/latex/nn/cnn/task.tex
@@ -1,13 +1,13 @@
 \begin{frame}{Classification}
-    \alert{TODO}
+    \V{["img/d2l/lenet", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Segmentation}
-    \alert{TODO}
+    \V{["tikz/neural-networks/cnn/segmentation", "tw", 1.0] | image}
 \end{frame}
   
 \begin{frame}{Super résolution}
-    \alert{TODO}
+    \V{["tikz/neural-networks/cnn/super-resolution", "th", 0.5] | image}
 \end{frame}
 
 \begin{frame}{Détection d'anomalie}
