improve shared/latex/nn vision-expert flavor

--- a/shared/latex/nn/cnn/data.tex
+++ b/shared/latex/nn/cnn/data.tex
@@ -44,9 +44,9 @@
 \end{frame}
 
 \begin{frame}{Super résolution}
-  \V{["tikz/neural-networks/cnn/super-resolution", "th", 0.5] | image}
+  \V{["tikz/ml/vision/super-resolution", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}{Détection d'anomalie}
-  \alert{TODO}
+  \V{["tikz/ml/vision/anomaly-detection", "tw", 1.0] | image}
 \end{frame}
