--- a/shared/latex/nn/cnn/interpret.tex
+++ b/shared/latex/nn/cnn/interpret.tex
@@ -14,4 +14,8 @@
   \alert{TODO}
 \end{frame}
 
+\begin{frame}{Une méthode moderne}
+  Vitjan Zavrtanik , Matej Kristan et Danijel Skcaj : Reconstruction by inpainting for visual anomaly detection.
+  \alert{TODO}
+\end{frame}
   
