--- a/shared/latex/nn/cnn/task.tex
+++ b/shared/latex/nn/cnn/task.tex
@@ -5,11 +5,15 @@
 \begin{frame}{Segmentation}
     \V{["tikz/neural-networks/cnn/segmentation", "tw", 1.0] | image}
 \end{frame}
-  
+
+\begin{frame}{Inpainting}
+    \alert{TODO}
+\end{frame}
+
 \begin{frame}{Super résolution}
-    \V{["tikz/neural-networks/cnn/super-resolution", "th", 0.5] | image}
+    \V{["tikz/neural-networks/cnn/super-resolution", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}{Détection d'anomalie}
-    \alert{TODO}
+    \V{["tikz/neural-networks/cnn/anomaly-detection", "tw", 1.0] | image}
 \end{frame}
