add tikz/ml/vision/inpainting tikz/nn/cnn/inpainting

--- a/shared/latex/nn/cnn/data.tex
+++ b/shared/latex/nn/cnn/data.tex
@@ -47,6 +47,10 @@
   \V{["tikz/ml/vision/super-resolution", "tw", 1.0] | image}
 \end{frame}
 
+\begin{frame}{Inpainting}
+  \V{["tikz/ml/vision/inpainting", "tw", 1.0] | image}
+\end{frame}
+
 \begin{frame}{Détection d'anomalie}
   \V{["tikz/ml/vision/anomaly-detection", "tw", 1.0] | image}
 \end{frame}
