--- a/shared/latex/nn/cnn/task.tex
+++ b/shared/latex/nn/cnn/task.tex
@@ -7,7 +7,7 @@
 \end{frame}
 
 \begin{frame}{Inpainting}
-    \alert{TODO}
+    \V{["tikz/neural-networks/cnn/inpainting", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}{Super résolution}
