add tikz figures for anomaly detection with inpainting

--- a/shared/latex/nn/cnn/task.tex
+++ b/shared/latex/nn/cnn/task.tex
@@ -17,3 +17,26 @@
 \begin{frame}{Détection d'anomalie}
     \V{["tikz/neural-networks/cnn/anomaly-detection", "tw", 1.0] | image}
 \end{frame}
+
+\begin{frame}{Détection d'anomalie : Une méthode moderne}
+    Vitjan Zavrtanik , Matej Kristan et Danijel Skcaj : Reconstruction by inpainting for visual anomaly detection.
+    \alert{TODO}
+\end{frame}
+
+\begin{frame}{Détection d'anomalie : Une méthode moderne}
+    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step1-mask", "th", 0.7] | image}
+\end{frame}
+
+\begin{frame}{Détection d'anomalie : Une méthode moderne}
+    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step2-autoencoder-predict", "tw", 1.0] | image}
+\end{frame}
+
+\begin{frame}{Détection d'anomalie : Une méthode moderne}
+    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step3-assemble", "th", 0.7] | image}
+\end{frame}
+  
+\begin{frame}{Détection d'anomalie : Une méthode moderne}
+    \alert{TODO}
+    comparaison entre l'original et l'assemblage
+\end{frame}
+
