--- a/shared/latex/nn/cnn/data.tex
+++ b/shared/latex/nn/cnn/data.tex
@@ -43,6 +43,10 @@
   \V{["img/ms-celeb", "th", 0.6] | image}
 \end{frame}
 
+\begin{frame}{Classification}
+  \V{["tikz/ml/vision/classification", "tw", 1.0] | image}
+\end{frame}
+
 \begin{frame}{Super résolution}
   \V{["tikz/ml/vision/super-resolution", "tw", 1.0] | image}
 \end{frame}
