--- a/shared/latex/nn/cnn/interpret.tex
+++ b/shared/latex/nn/cnn/interpret.tex
@@ -1,16 +1,20 @@
 \begin{frame}{Interprétation de CNN}
-  \alert{TODO}
+  Comment interpréter la prédiction d'un réseau de neurone ?
+  \V{["tikz/neural-networks/cnn/classification", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Saliency map}
-    \alert{TODO}
+  Evaluation de la contribution de chaque pixel à la décision finale
+  \alert{TODO}
 \end{frame}
 
 \begin{frame}{Gradconv}
-    \alert{TODO}
+
+  \alert{TODO}
 \end{frame}
 
 \begin{frame}{Occlusion sensitivity}
+  Suppression de parties de l'image pour estimer à quel point cela dégrade les performances
   \alert{TODO}
 \end{frame}
   
