--- a/shared/latex/nn/cnn/task.tex
+++ b/shared/latex/nn/cnn/task.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Classification}
-    \V{["img/d2l/lenet", "tw", 1] | image}
+    \V{["tikz/neural-networks/cnn/classification", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Segmentation}
@@ -36,7 +36,6 @@
 \end{frame}
   
 \begin{frame}{Détection d'anomalie : Une méthode moderne}
-    \alert{TODO}
-    comparaison entre l'original et l'assemblage
+    \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step4-compare-input-output", "th", 0.8] | image}
 \end{frame}
 
