--- a/figures/tikz/ml/vision/classification.tex
+++ b/figures/tikz/ml/vision/classification.tex
@@ -14,7 +14,7 @@
 \def\DcnvColor{rgb:blue,5;green,2.5;white,5}
 \def\UnpoolColor{rgb:yellow,5;red,2.5;white,5}
 \def\SoftmaxColor{rgb:magenta,5;black,7}
-
+\usepackage{xcolor}
 \usetikzlibrary{3d} %for including external image 
 
 \begin{document}
@@ -25,14 +25,30 @@
 %% Draw Layer Blocks
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%   
-\node (alan) at (0,0,0) {\includegraphics[width=12cm,height=12cm]{img/sub-img/landscape-example-masked.png}};
+\node (image) at (0,0,0) {\includegraphics[width=4cm,height=4cm]{img/sub-img/landscape-example.png}};
 
-
-\node (alan2) at (20,0,0) {\includegraphics[width=12cm,height=12cm]{img/sub-img/landscape-example.png}};
+\node (tab) at (5,0,0) {
+    \begin{tabular}{|c|}
+        \hline
+        Forêt \\
+        \hline
+        {\color{red}\textbf{Mer}} \\
+        \hline
+        Rue \\
+        \hline
+        Montagne \\
+        \hline
+        Glacier \\
+        \hline
+        Bâtiment \\
+        \hline
+        
+    \end{tabular}
+};
 
 %Connections
 
-\path[->,>=stealth,line width=10pt] (alan) edge node [left] {} (alan2);
+\path[->,>=stealth,line width=5pt] (image) edge node [left] {} (tab);
 
 \end{tikzpicture}
 \end{document}\grid
