--- a/shared/latex/nn/transformer/attention-model.tex
+++ b/shared/latex/nn/transformer/attention-model.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Modèle à attention}
-  \alert{TODO}
-  Modèle à attention pour la traduction
-  \V{["img/attention-model", "th", 0.8] | image}
+  \V{["tikz/neural-networks/attention-mechanism", "th", 0.75] | image}
+\end{frame}
+\begin{frame}{Modèle à attention}
   \begin{center}
     \bluelink{https://demo.allennlp.org/reading-comprehension}{Démo modèle à attention}
   \end{center}
