--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -419,3 +419,8 @@
   fill=DeepSpaceSparkle,
   text=white,
   draw=DeepSpaceSparkle!50}}
+\tikzset{scalar/.style={
+  circle,
+  fill=IndianYellow,
+  text=white,
+  draw=IndianYellow!50}}
