--- a/shared/latex/nn/cnn/task.tex
+++ b/shared/latex/nn/cnn/task.tex
@@ -19,8 +19,7 @@
 \end{frame}
 
 \begin{frame}{Détection d'anomalie : Une méthode moderne}
-    Vitjan Zavrtanik , Matej Kristan et Danijel Skcaj : Reconstruction by inpainting for visual anomaly detection.
-    \alert{TODO}
+    [2021] \textit{Vitjan Zavrtanik , Matej Kristan et Danijel Skcaj : \\Reconstruction by inpainting for visual anomaly detection.} 
 \end{frame}
 
 \begin{frame}{Détection d'anomalie : Une méthode moderne}
@@ -37,5 +36,11 @@
   
 \begin{frame}{Détection d'anomalie : Une méthode moderne}
     \V{["tikz/neural-networks/cnn/inpainting-anomaly-detect-step4-compare-input-output", "th", 0.8] | image}
+\end{frame}
+  
+\begin{frame}{Détection d'anomalie : Une méthode moderne}
+    \begin{center}
+        \bluelink{https://colab.research.google.com/drive/1QbpY8vfXb-yJQ3N-Amf-2pANyxlEYH_-\#forceEdit=true&sandboxMode=true}{Démo \og Reconstruction by inpainting for visual anomaly detection \fg}
+    \end{center}
 \end{frame}
 
