--- a/shared/latex/nn/transformer/model.tex
+++ b/shared/latex/nn/transformer/model.tex
@@ -1,3 +1,9 @@
+\begin{frame}{Modèle à attention}
+  \begin{center}
+    \bluelink{https://demo.allennlp.org/reading-comprehension}{Démo modèle à attention}
+  \end{center}
+\end{frame}
+
 \begin{frame}{Réseaux transformeurs}
   \V{["img/transformer-fun", "tw", 0.9] | image}
 \end{frame}
