--- a/figures/tikz/neural-networks/cnn/inpainting-anomaly-detect-step4-compare-input-output.tex
+++ b/figures/tikz/neural-networks/cnn/inpainting-anomaly-detect-step4-compare-input-output.tex
@@ -38,15 +38,18 @@
 %% Draw Layer Blocks
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%   
-\node (input) at (0,3.5,0) {\includegraphics[width=3cm,height=3cm]{img/sub-img/toothbrush-defective.png}};
+\node (input) at (0,3.5,0) {\includegraphics[width=3cm,height=3cm]{img/sub-img/transistor-defective.png}};
 \node (labelinput) at (0,1.5,0) {input};
 
 \node[hencoder] (euclide) at (4,3.5,0) {Distance euclidienne};
 
-\node (output) at (8,3.5,0) {\includegraphics[width=3cm,height=3cm]{img/sub-img/toothbrush.png}};
+\node (output) at (8,3.5,0) {\includegraphics[width=3cm,height=3cm]{img/sub-img/transistor-predicted.png}};
 \node (labeloutput) at (8,1.5,0) {output};
 
-\node (heatmap) at (4,0,0) {\includegraphics[width=3cm,height=3cm]{img/sub-img/toothbrush.png}};
+\node (heatmap) at (4,0,0) {\includegraphics[width=3cm,height=3cm]{img/sub-img/transistor-heatmap.png}};
+
+%\node (ground) at (5.9,0,0) {\includegraphics[width=3cm,height=3cm]{img/sub-img/transistor-ground-truth.png}};
+
 
 %Connections
 \path[->,>=stealth] (input.east) edge node [left] {} (euclide.west);
