--- a/figures/tikz/neural-networks/attention-mechanism.tex
+++ b/figures/tikz/neural-networks/attention-mechanism.tex
@@ -17,7 +17,7 @@
     \foreach \y in {1,...,3} {
         \node[input] (I\y) at (\y -1, 0) {$c_\y$};
     }
-    \node[hencoder,minimum width=5cm] (context-encoder) at (1,1.5) {Encoder de contexte};
+    \node[hencoder,minimum width=5cm] (context-encoder) at (1,1.5) {Encodeur de contexte};
     \foreach \y in {1,...,3} {
         \node[hdecoder] (K\y) at (\y -1, 3) {$k_\y$};
     }
