--- a/shared/latex/nn/rnn/video.tex
+++ b/shared/latex/nn/rnn/video.tex
@@ -1,4 +1,7 @@
 \begin{frame}{Application aux vidéos}
-  Prédiction de la prochaine image \\
-  \alert{TODO}
+  Prédiction de la prochaine image :\\
+  \\begin{itemize}
+    \item Combinaison de CNN et RNN
+    \item Le RNN est utilisé en tant que \og modèle de langage \fg de vidéo
+  \end{itemize}
 \end{frame}
