--- a/shared/latex/nn/transformer/vision-transformer.tex
+++ b/shared/latex/nn/transformer/vision-transformer.tex
@@ -1,4 +1,8 @@
-\begin{frame}{Vision Transformer}
-    \alert{TODO}
+\begin{frame}{Vision Transformers}
+    \V{["img/vision-transformer", "th", 0.7] | image}
 \end{frame}
+
+
+
+
   
