add tikz/neural-networks/transformer/transformer-cell;add tikz/neural-networks/transformer/self-attention

--- a/shared/latex/nn/transformer/transformer-cell.tex
+++ b/shared/latex/nn/transformer/transformer-cell.tex
@@ -1,9 +1,11 @@
 \begin{frame}{Cellule transformer}
-    \alert{TODO}
+    \V{["tikz/neural-networks/transformer/transformer-cell", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Méchanisme d'auto-attention}
-    \alert{TODO}
+    \V{["tikz/neural-networks/transformer/self-attention", "tw", 0.8] | image}
+    \[\vec{r}_i=\sum_{j=1}^{n} w_j*\vec{v}_j\]
+    où $\left \{w_j\right \}$ sont les poids d'attention entre $\vec{q}_i$ et tous les $\vec{k}_j$
 \end{frame}
 
 \begin{frame}{Multiple têtes d'auto-attention}
