--- a/figures/tikz/neural-networks/attention-mechanism.tex
+++ b/figures/tikz/neural-networks/attention-mechanism.tex
@@ -1,36 +1,27 @@
 \documentclass[beamer,crop,tikz]{standalone}
 
 \usepackage{formation}
-\tikzset{
-    *|/.style={
-        to path={
-            (perpendicular cs: horizontal line through={(\tikztostart)},
-                                 vertical line through={(\tikztotarget)})
-            -- (\tikztotarget) \tikztonodes
-        }
-    }
-}
 
 \begin{document}
   \begin{tikzpicture}[x=2cm]
 %nodes context part
     \foreach \y in {1,...,3} {
-        \node[input] (I\y) at (\y -1, 0) {$c_\y$};
+        \node[input] (I\y) at (\y -1, 0) {$\vec{c}_\y$};
     }
-    \node[hencoder,minimum width=5cm] (context-encoder) at (1,1.5) {Encodeur de contexte};
+    \node[feedforward,minimum width=5cm] (context-encoder) at (1,1.5) {Encodeur de contexte};
     \foreach \y in {1,...,3} {
-        \node[hdecoder] (K\y) at (\y -1, 3) {$k_\y$};
+        \node[hencoder] (K\y) at (\y -1, 3) {$\vec{k}_\y$};
     }
     \foreach \y in {1,...,3} {
         \node[scalar] (W\y) at (\y -1, 6) {$w_\y$};
     }
-    \node[hencoder] (sumw) at (1,7.5) {+};
-    \node[output] (output) at (1,9) {V};
+    \node[operator] (sumw) at (1,7.5) {+};
+    \node[output] (output) at (1,9) {$\vec{V}$};
 %nodes input part
-    \node[input] (input) at              (-2,0) {X};
-    \node[hencoder] (input-encoder) at   (-2,1.5) {Encodeur de l'entrée};
-    \node[hdecoder] (H) at               (-2, 3) {$q$};
-    \node[hencoder,align=left] (dotw) at (-2,4.5) {produit scalaire\\ puis softmax};
+    \node[input] (input) at              (-2,0) {$\vec{X}$};
+    \node[feedforward] (input-encoder) at   (-2,1.5) {Encodeur de l'entrée};
+    \node[hencoder] (H) at               (-2, 3) {$\vec{q}$};
+    \node[self-attention,align=left] (dotw) at (-2,4.5) {produit scalaire\\ puis softmax};
 
 %labels
     \node () at (2.8,0) {Contexte};
