--- a/shared/latex/nn/transformer/transformer-cell.tex
+++ b/shared/latex/nn/transformer/transformer-cell.tex
@@ -8,6 +8,6 @@
     où $\left \{w_j\right \}$ sont les poids d'attention entre $\vec{q}_i$ et tous les $\vec{k}_j$
 \end{frame}
 
-\begin{frame}{Multiple têtes d'auto-attention}
-    \alert{TODO}
+\begin{frame}{Multiples têtes d'auto-attention}
+    \V{["tikz/neural-networks/transformer/multi-head-attention", "th", 0.75] | image}
 \end{frame}
