--- a/figures/tikz/neural-networks/transformer/transformer-cell.tex
+++ b/figures/tikz/neural-networks/transformer/transformer-cell.tex
@@ -24,7 +24,7 @@
     \node[input] (x3) at (4, -4.5) {$\vec{x}_{3}$};
     
     \node[self-attention,minimum width=7cm] (self-att) at (1,-1.25) {auto-attention};
-    \node[feedforward,minimum width=7cm] (feedforward) at (1,1.25) {couches denses};
+    \node[feedforward,minimum width=7cm] (feedforward) at (1,1.25) {couche dense};
 
     % Draw add operator
     \node[operator] (s1) at (-2,-3) {$+$};
