start tikz/propal/olea/global

--- a/orsys/INTRA/2022-03-olea-medical/latex/about/description.tex
+++ b/orsys/INTRA/2022-03-olea-medical/latex/about/description.tex
@@ -28,8 +28,9 @@
     \item Concepts fondamentaux d'un réseau de neurones
     \item Outils usuels Machine Learning et Deep Learning
     \item Convolutional Neural Networks (CNN)
+    \item Interpretation de Modèles
+    \item Détection d'anomalies dans des images
     \item Recurrent Neural Networks (RNN)
     \item Modèles générationnels : VAE et GAN
-    \item Deep Reinforcement Learning
   \end{itemize}
 \end{frame}
