--- a/shared/latex/ai/history.tex
+++ b/shared/latex/ai/history.tex
@@ -55,7 +55,10 @@
   \V{["img/poker-bots", "tw", 0.6] | image}
 \end{frame}
 
-
 \begin{frame}{2019 --- AlphaStar, top 0.2\% des joueurs de StarCraft II}
   \V{["img/deepmind-starcraft-2", "tw", 0.6] | image}
+\end{frame}
+
+\begin{frame}{2021 --- Alphafold, retrouve la configuration 3D de molécules}
+  \V{["img/foldit", "tw", 0.6] | image}
 \end{frame}
