add link to robot-medic STAR 2022 paper

--- a/shared/latex/sectors/sante.tex
+++ b/shared/latex/sectors/sante.tex
@@ -141,7 +141,7 @@
     \begin{itemize}
       \item Sutures automatiques en 2014
       \item Appendicetomie autonome en 2016
-      \item Meilleure précision que les chirurgiens
+      \item Meilleure précision que les chirurgiens dans de \bluelink{https://www.science.org/doi/pdf/10.1126/scirobotics.abj2908}{+ en + de domaines}
       \end{itemize}
   \end{minipage}
   \begin{minipage}{0.49\linewidth}
