Use new console style for Python snippets + slight edits
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/basics/dictionaries.tex
+++ b/shared/latex/python/basics/dictionaries.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Caractéristiques de \texttt{dict}}
   \texttt{dict} permet de définir des associations clef-valeur~:
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Correspond aux objets JS, Map Java
     \item Accès à la valeur associée à une clef en $\mathcal{O}(1)$
     \item Test de présence d'une clef en $\mathcal{O}(1)$
@@ -8,5 +8,5 @@
 \end{frame}
 
 \begin{frame}{Utilisation d'un \texttt{dict}}
-  \mintedcustom{python/basics/dictionaries/usage}{py}{text}
+  \pycon{python/basics/dictionaries/usage}
 \end{frame}
