--- a/shared/latex/python/basics/lists.tex
+++ b/shared/latex/python/basics/lists.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Caractéristiques de \texttt{list}}
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Collection la plus utilisée en Python
     \item Peut contenir des éléments de types différents (\emph{très déconseillé})
     \item A de bonnes performances pour un usage standard
@@ -9,18 +9,10 @@
 \end{frame}
 
 \begin{frame}{Manipulation basique d'une liste}
-  \mintedpycode{python/basics/lists/usage}
+  \pycon{python/basics/lists/usage}
 \end{frame}
 
 \begin{frame}{Tranche de liste}
   Une tranche de liste sélectionne une sous-partie de la liste~:
-  \mintedpycode{python/basics/lists/slice}
-\end{frame}
-
-\begin{frame}{Fonction \texttt{range}}
-  La fonction \texttt{range} permet de créer des suites d'indices~:
-
-  \mintedpycode{python/basics/lists/range}
-
-  Par défaut elle renvoie des objets de type \texttt{range}.
+  \pycon{python/basics/lists/slice}
 \end{frame}
