--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -341,6 +341,11 @@
   \vspace{-1cm}%
 }
 
+\newcommand{\pycon}[1]{%
+  \inputminted[fontsize=\scriptsize,bgcolor=pythonbg,framesep=1mm]{pycon}{code/#1.pycon}%
+  \vspace{-1cm}%
+}
+
 \definecolor{pythonbg}{rgb}{0.9,1,0.95}
 \definecolor{returnbg}{rgb}{0.88,0.88,0.88}
 
