--- a/shared/latex/python/basics/control-structures.tex
+++ b/shared/latex/python/basics/control-structures.tex
@@ -13,7 +13,15 @@
   \mintedpycode{python/basics/control-structures/if}
 \end{frame}
 
-\begin{frame}{Structure de boucle «~Pour dans~»}
+\begin{frame}{Structure de boucle «~Pour dans~» ⋅ Fonction \texttt{range}}
+  La fonction \texttt{range} permet de créer des suites d'indices~:
+
+  \mintedpycode{python/basics/control-structures/range}
+
+  Par défaut elle renvoie des objets de type \texttt{range}, plus efficaces que des listes.
+\end{frame}
+
+\begin{frame}{Structure de boucle «~Pour dans~» ⋅ Utilisation}
   Utilisation de \texttt{for}~:
   \mintedpycode{python/basics/control-structures/for}
 \end{frame}
