--- a/shared/latex/python/basics/intro-collections.tex
+++ b/shared/latex/python/basics/intro-collections.tex
@@ -1,12 +1,12 @@
 \begin{frame}{Introduction}
   Les quatre principales structures de données en Python sont~:
 
-  \begin{description}[<+(1)->]
+  \begin{description}
     \item[\texttt{list}] Listes modifiables et potentiellement hétérogènes
     \item[\texttt{dict}] Associations clef-valeur
     \item[\texttt{tuple}] N-uplets non modifiables
     \item[\texttt{set}] Ensembles (pas de répétition, pas d'ordre)
   \end{description}
 
-  \onslide<+(1)->{Chacune a ses caractéristiques propres.}
+  Chacune a ses caractéristiques propres.
 \end{frame}
