--- a/shared/latex/python/basics/sets.tex
+++ b/shared/latex/python/basics/sets.tex
@@ -1,13 +1,15 @@
 \begin{frame}{Caractéristiques de \texttt{set}}
   \texttt{set} définit des collections non ordonnées sans répétition~:
-  \begin{itemize}[<+->]
+  \begin{itemize}
     \item Accès aux opérations d'ensembles (union, intersection, …)
     \item Test de présence d'un objet en $\mathcal{O}(1)$ (contre $\mathcal{O}(n)$ pour une \texttt{list})
+
+    \pycon{python/basics/sets/timeit}
   \end{itemize}
 \end{frame}
 
 \begin{frame}{Utilisation d'un \texttt{set}}
-  \mintedcustom{python/basics/sets/usage}{py}{text}
+  \pycon{python/basics/sets/usage}
 \end{frame}
 
 \begin{frame}{\texttt{set}s immuables}
