--- a/shared/latex/python/basics/tuples.tex
+++ b/shared/latex/python/basics/tuples.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Caractéristiques de \texttt{tuple}}
   Les n-uplets (\emph{tuples} en anglais), sont très similaires aux listes, mais sont~:
 
-  \begin{itemize}[<+(1)->]
+  \begin{itemize}
     \item Immuables
     \item Adaptés aux éléments hétérogènes
     \item Hashables si leurs éléments sont immuables
@@ -10,23 +10,21 @@
 \end{frame}
 
 \begin{frame}{Utilisation d'un \texttt{tuple}}
-  \mintedpycode{python/basics/tuples/usage}
+  \pycon{python/basics/tuples/usage}
 \end{frame}
 
 \begin{frame}{Définitions multiples avec un \texttt{tuple}}
-  \mintedcustom{python/basics/tuples/multiple-definitions}{py}{text}
+  \pycon{python/basics/tuples/multiple-definitions}
 \end{frame}
 
 \begin{frame}{Retours multiples avec un \texttt{tuple}}
-  \mintedcustom{python/basics/tuples/multiple-returns}{py}{text}
+  \pycon{python/basics/tuples/multiple-returns}
 \end{frame}
 
 \begin{frame}{Échange de variables avec un \texttt{tuple}}
-  \mintedcustom{python/basics/tuples/simple-swap}{py}{text}
+  \pycon{python/basics/tuples/simple-swap}
 
-  \onslide<+(1)->{
-    Utilisé pour implémenter le tri à bulles~:
+  Utilisé pour implémenter le tri à bulles~:
 
-    \mintedpycode{python/basics/tuples/bubble-sort}
-  }
+  \mintedpycode{python/basics/tuples/bubble-sort}
 \end{frame}
